fix(playback): restore legacy JSON replay loading
Handle older inventory_update snapshots that contain null content slots and ensure seek reconstruction uses spawn-capable entity events instead of upgraded inventory events. Add regressions for both cases.